tests/rosetta/out/Rust/99-bottles-of-beer-2.error
rustc error: exit status 1
error[E0308]: mismatched types
  --> /tmp/TestMochiToRust99-bottles-of-beer-2441572761/001/prog.rs:13:41
   |
13 |             let ch = &s[i as usize..i + 1 as usize];
   |                                         ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
  --> /tmp/TestMochiToRust99-bottles-of-beer-2441572761/001/prog.rs:13:37
   |
13 |             let ch = &s[i as usize..i + 1 as usize];
   |                                     ^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/TestMochiToRust99-bottles-of-beer-2441572761/001/prog.rs:13:39
   |
13 |             let ch = &s[i as usize..i + 1 as usize];
   |                                       ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
  --> /tmp/TestMochiToRust99-bottles-of-beer-2441572761/001/prog.rs:21:17
   |
21 |                 cur += ch;
   |                 ---^^^^^^
   |                 |
   |                 cannot use `+=` on type `&str`

error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
  --> /tmp/TestMochiToRust99-bottles-of-beer-2441572761/001/prog.rs:35:17
   |
35 |                 res += sep;
   |                 ---^^^^^^^
   |                 |
   |                 cannot use `+=` on type `&str`

error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
  --> /tmp/TestMochiToRust99-bottles-of-beer-2441572761/001/prog.rs:37:13
   |
37 |             res += xs[i as usize];
   |             ---^^^^^^^^^^^^^^^^^^
   |             |
   |             cannot use `+=` on type `&str`

error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/TestMochiToRust99-bottles-of-beer-2441572761/001/prog.rs:52:57
   |
52 |             let mut t = tens[((n as f64) / (10 as f64)).parse::<i32>().unwrap() as usize];
   |                                                         ^^^^^ method not found in `f64`

error[E0308]: mismatched types
  --> /tmp/TestMochiToRust99-bottles-of-beer-2441572761/001/prog.rs:67:20
   |
67 |             w[0] = format!("{}{}", w[0], "s");
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
   |
   = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> /tmp/TestMochiToRust99-bottles-of-beer-2441572761/001/prog.rs:82:46
   |
82 |             a = append(a, &p[i as usize..i + 1 as usize]);
   |                                              ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
  --> /tmp/TestMochiToRust99-bottles-of-beer-2441572761/001/prog.rs:82:42
   |
82 |             a = append(a, &p[i as usize..i + 1 as usize]);
   |                                          ^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/TestMochiToRust99-bottles-of-beer-2441572761/001/prog.rs:82:44
   |
82 |             a = append(a, &p[i as usize..i + 1 as usize]);
   |                                            ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
   --> /tmp/TestMochiToRust99-bottles-of-beer-2441572761/001/prog.rs:100:13
    |
100 |             s += a[k as usize];
    |             -^^^^^^^^^^^^^^^^^
    |             |
    |             cannot use `+=` on type `&str`

error[E0308]: mismatched types
   --> /tmp/TestMochiToRust99-bottles-of-beer-2441572761/001/prog.rs:103:34
    |
103 |         s += &p[p.len() as i32 - 1 as usize..p.len() as i32 as usize];
    |                                  ^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: cannot subtract `usize` from `i32`
   --> /tmp/TestMochiToRust99-bottles-of-beer-2441572761/001/prog.rs:103:32
    |
103 |         s += &p[p.len() as i32 - 1 as usize..p.len() as i32 as usize];
    |                                ^ no implementation for `i32 - usize`
    |
    = help: the trait `Sub<usize>` is not implemented for `i32`
    = help: the following other types implement trait `Sub<Rhs>`:
              `&i32` implements `Sub<i32>`
              `&i32` implements `Sub`
              `i32` implements `Sub<&i32>`
              `i32` implements `Sub`

error[E0308]: mismatched types
   --> /tmp/TestMochiToRust99-bottles-of-beer-2441572761/001/prog.rs:103:46
    |
103 |         s += &p[p.len() as i32 - 1 as usize..p.len() as i32 as usize];
    |                                              ^^^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: the type `str` cannot be indexed by `std::ops::Range<i32>`
   --> /tmp/TestMochiToRust99-bottles-of-beer-2441572761/001/prog.rs:103:17
    |
103 |         s += &p[p.len() as i32 - 1 as usize..p.len() as i32 as usize];
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string indices are ranges of `usize`
    |
    = help: the trait `SliceIndex<str>` is not implemented for `std::ops::Range<i32>`
    = help: the following other types implement trait `SliceIndex<T>`:
              `std::ops::Range<usize>` implements `SliceIndex<[T]>`
              `std::ops::Range<usize>` implements `SliceIndex<str>`
    = note: required for `str` to implement `Index<std::ops::Range<i32>>`

error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
   --> /tmp/TestMochiToRust99-bottles-of-beer-2441572761/001/prog.rs:103:9
    |
103 |         s += &p[p.len() as i32 - 1 as usize..p.len() as i32 as usize];
    |         -^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |         |
    |         cannot use `+=` on type `&str`

error: aborting due to 17 previous errors

Some errors have detailed explanations: E0277, E0308, E0368, E0599.
For more information about an error, try `rustc --explain E0277`.
